# Single-Image-3D-Reconstruction

./: .gitignore  README.md  evaluate.py  explain.py  pyproject.toml  requirements.txt  train.py  visualize.py
configs/: default.yaml  test.yaml
notebooks/: demo.ipynb
src/: __init__.py
src/datasets/: __init__.py  shapenet_simulated.py  transforms.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/explainability/: __init__.py  feature_importance.py  shap_analysis.py
src/models/: __init__.py  decoder.py  encoder.py  losses.py  reconstruction_net.py
src/training/: __init__.py  experiment.py  trainer.py
src/utils/: __init__.py
src/visualization/: __init__.py  point_cloud_viz.py  training_viz.py
tests/: test_dataset.py  test_losses.py  test_metrics.py  test_model.py
